--- a/config/database.yml
+++ b/config/database.yml
@@ -10,12 +10,9 @@
 #   http://dev.mysql.com/doc/refman/5.7/en/old-client.html
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
 
 development:
   <<: *default
@@ -23,7 +20,8 @@ development:
 
 production:
   <<: *default
-  database: photos_in_family_development
+  prepared_statements: false
+  database: photos_in_family
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
